--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.0.8",
+  "version": "0.0.9",
   "description": "An observable for global state that can be subscribed to with react hooks, or callbacks",
   "license": "MIT",
   "main": "dist/index.js",
@@ -53,7 +53,11 @@
     "trailingComma": "es5"
   },
   "name": "observable-slice",
-  "author": "teagueStockwell",
+  "author": {
+    "name": "Teague Stockwell",
+    "email": "tsappdevelopment@gmail.com",
+    "url": "https://teaguestockwell.com"
+  },
   "module": "dist/observable-slice.esm.js",
   "size-limit": [
     {
