--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.0.9",
+  "version": "0.0.10",
   "description": "An observable for global state that can be subscribed to with react hooks, or callbacks",
   "license": "MIT",
   "main": "dist/index.js",
@@ -71,6 +71,7 @@
   ],
   "devDependencies": {
     "@size-limit/preset-small-lib": "^7.0.8",
+    "@testing-library/react-hooks": "^8.0.1",
     "@types/lodash.debounce": "^4.0.7",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.5",
