--- a/package.json
+++ b/package.json
@@ -1,10 +1,17 @@
 {
-  "version": "0.0.12",
+  "name": "observable-slice",
+  "version": "0.0.13",
   "description": "An observable for global state that can be subscribed to with react hooks, or callbacks",
   "license": "MIT",
-  "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "sideEffects": false,
+  "exports": {
+    "require": "./dist/index.cjs", 
+    "default": "./dist/index.modern.js"
+  },
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.module.js",
+  "unpkg": "./dist/index.umd.js", 
   "repository": {
     "type": "git",
     "url": "https://github.com/teaguestockwell/observable-slice"
@@ -50,14 +57,11 @@
     "singleQuote": true,
     "trailingComma": "es5"
   },
-  "name": "observable-slice",
   "author": {
     "name": "Teague Stockwell",
     "email": "tsappdevelopment@gmail.com",
     "url": "https://teaguestockwell.com"
   },
-  "module": "dist/observable-slice.esm.js",
-  "exports": "./dist/observable-slice.modern.mjs",
   "devDependencies": {
     "@testing-library/react-hooks": "^8.0.1",
     "@types/react": "^18.0.9",
