--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
   "typings": "dist/index.d.ts",
   "sideEffects": false,
   "exports": {
-    "require": "./dist/index.cjs", 
+    "require": "./dist/index.cjs",
     "default": "./dist/index.modern.js"
   },
   "main": "./dist/index.cjs",
   "module": "./dist/index.module.js",
-  "unpkg": "./dist/index.umd.js", 
+  "unpkg": "./dist/index.umd.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/teaguestockwell/observable-slice"
@@ -40,8 +40,7 @@
     "build": "microbundle --sourcemap false --tsconfig tsconfig.json",
     "test": "tsdx test --passWithNoTests",
     "lint": "tsdx lint",
-    "prepare": "yarn build",
-    "analyze": "size-limit --why"
+    "prepare": "yarn build"
   },
   "peerDependencies": {
     "react": ">=16"
@@ -63,11 +62,14 @@
     "url": "https://teaguestockwell.com"
   },
   "devDependencies": {
-    "@testing-library/react-hooks": "^8.0.1",
+    "@testing-library/react": "^13.3.0",
     "@types/react": "^18.0.9",
+    "@types/react-dom": "^18.0.5",
+    "babel-jest": "^28.1.1",
     "husky": "^8.0.1",
     "microbundle": "^0.15.0",
     "react": "^18.1.0",
+    "react-dom": "^18.2.0",
     "tsdx": "^0.14.1",
     "tslib": "^2.4.0",
     "typescript": "^4.7.2"
