--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "observable-slice",
-  "version": "0.0.17",
+  "version": "0.0.18",
   "description": "An observable for global state that can be subscribed to with react hooks, or callbacks",
   "license": "MIT",
   "typings": "dist/index.d.ts",
@@ -37,9 +37,9 @@
     "node": ">=10"
   },
   "scripts": {
-    "build": "microbundle --sourcemap false --tsconfig tsconfig.json",
-    "test": "tsdx test --passWithNoTests",
-    "lint": "tsdx lint",
+    "build": "microbundle --sourcemap false --tsconfig tsconfig.json --visualize --external react",
+    "test": "tsdx test",
+    "lint": "tsdx lint src",
     "prepare": "yarn build"
   },
   "peerDependencies": {
@@ -65,7 +65,8 @@
     "@testing-library/react": "^13.3.0",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.5",
-    "babel-jest": "^28.1.1",
+    "@types/use-sync-external-store": "^0.0.3",
+    "babel-jest": "^29.2.2",
     "husky": "^8.0.1",
     "microbundle": "^0.15.0",
     "react": "^18.1.0",
@@ -73,5 +74,8 @@
     "tsdx": "^0.14.1",
     "tslib": "^2.4.0",
     "typescript": "^4.7.2"
+  },
+  "dependencies": {
+    "use-sync-external-store": "^1.2.0"
   }
 }
