--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "observable-slice",
-  "version": "0.0.20-2",
+  "version": "0.0.20-4",
   "description": "An observable for global state that can be subscribed to with react hooks, or callbacks",
   "license": "MIT",
   "author": {
@@ -19,10 +19,6 @@
   "main": "./dist/index.cjs",
   "umd:main": "./dist/index.umd.js",
   "module": "./dist/index.module.js",
-  "exports": {
-    "require": "./dist/index.cjs",
-    "default": "./dist/index.modern.js"
-  },
   "keywords": [
     "redux",
     "zustand",
@@ -34,7 +30,9 @@
   ],
   "files": [
     "dist",
-    "src"
+    "readme.md",
+    "licence",
+    "package.json"
   ],
   "engines": {
     "node": ">=10"
