--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "build": "rm -rf ./dist && microbundle --sourcemap false --tsconfig tsconfig.json --visualize --external react --name observable-slice",
     "test": "tsdx test",
     "lint": "tsdx lint src",
-    "prepare": "yarn build"
+    "prepublishOnly": "yarn build"
   },
   "peerDependencies": {
     "react": ">=16"
